--- a/packages/configs/default/package.json
+++ b/packages/configs/default/package.json
@@ -54,5 +54,8 @@
     "@parcel/transformer-typescript-types": "^2.0.0-alpha.3.1",
     "@parcel/transformer-yaml": "^2.0.0-alpha.3.1",
     "@parcel/transformer-mdx": "^2.0.0-alpha.3.1"
+  },
+  "peerDependencies": {
+    "@parcel/core": "^2.0.0-alpha.3.1"
   }
 }
