--- a/packages/transformers/js/package.json
+++ b/packages/transformers/js/package.json
@@ -23,6 +23,7 @@
     "@babel/template": "^7.0.0",
     "@babel/traverse": "^7.0.0",
     "@babel/types": "^7.0.0",
+    "@parcel/diagnostic": "^2.0.0-alpha.3.1",
     "@parcel/babylon-walk": "^2.0.0-alpha.3.1",
     "@parcel/plugin": "^2.0.0-alpha.3.1",
     "@parcel/scope-hoisting": "^2.0.0-alpha.3.1",
@@ -30,5 +31,8 @@
     "@parcel/utils": "^2.0.0-alpha.3.1",
     "nullthrows": "^1.1.1",
     "semver": "^5.4.1"
+  },
+  "peerDependencies": {
+    "@parcel/core": "^2.0.0-alpha.3.1"
   }
 }
