--- a/packages/packagers/js/package.json
+++ b/packages/packagers/js/package.json
@@ -20,5 +20,8 @@
     "@parcel/scope-hoisting": "^2.0.0-alpha.3.1",
     "@parcel/source-map": "^2.0.0-alpha.3.1",
     "@parcel/utils": "^2.0.0-alpha.3.1"
+  },
+  "peerDependencies": {
+    "@parcel/core": "^2.0.0-alpha.3.1"
   }
 }
