--- a/packages/transformers/react-refresh-wrap/package.json
+++ b/packages/transformers/react-refresh-wrap/package.json
@@ -25,5 +25,8 @@
     "@parcel/utils": "^2.0.0-alpha.3.1",
     "react-refresh": "^0.6.0",
     "semver": "^5.4.1"
+  },
+  "peerDependencies": {
+    "@parcel/core": "^2.0.0-alpha.3.1"
   }
 }
